--- a/src/Kanbas/kanbas-node-server-app/.env
+++ b/src/Kanbas/kanbas-node-server-app/.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://a6--funny-vacherin-731ed5.netlify.app/
+NODE_VERSION= 18.18.0
